--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -24,6 +24,12 @@
     <Filter Include="include\Platform">
       <UniqueIdentifier>{153a696c-2b63-4f6f-87ab-7cd902b771da}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\Renderer">
+      <UniqueIdentifier>{dad92acd-a865-44ab-ae9e-f15830e3ad2d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Renderer">
+      <UniqueIdentifier>{5bec6814-93b9-4420-9d18-494d10907021}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\Zmey\Config.h">
@@ -65,6 +71,15 @@
     <ClInclude Include="..\..\Source\Platform\WindowsPlatform.h">
       <Filter>Source\Memory</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Renderer\Renderer.h">
+      <Filter>include\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Renderer\VulkanRenderer.h">
+      <Filter>Source\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Renderer\VulkanHelpers.h">
+      <Filter>Source\Renderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp">
@@ -81,6 +96,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Platform\WindowsPlatform.cpp">
       <Filter>Source\Platform</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Renderer\VulkanRenderer.cpp">
+      <Filter>Source\Renderer</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
