--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -62,7 +62,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\libx64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;ChakraCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>postbuild.bat $(SolutionDir) $(OutDir)</Command>
@@ -87,7 +87,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\libx64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;ChakraCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>postbuild.bat $(SolutionDir) $(OutDir)</Command>
@@ -109,11 +109,13 @@
     <ClInclude Include="..\..\include\Zmey\Platform\Platform.h" />
     <ClInclude Include="..\..\include\Zmey\Renderer\Renderer.h" />
     <ClInclude Include="..\..\include\Zmey\ResourceLoader\ResourceLoader.h" />
+    <ClInclude Include="..\..\include\Zmey\ScriptEngine.h" />
     <ClInclude Include="..\..\include\Zmey\Tasks\BlockingQueue.h" />
     <ClInclude Include="..\..\include\Zmey\Tasks\TaskSystem.h" />
     <ClInclude Include="..\..\Source\Platform\WindowsPlatform.h" />
     <ClInclude Include="..\..\Source\Renderer\VulkanHelpers.h" />
     <ClInclude Include="..\..\Source\Renderer\VulkanRenderer.h" />
+    <ClInclude Include="..\..\Source\Scripting\ChakraScriptEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp" />
@@ -123,6 +125,7 @@
     <ClCompile Include="..\..\Source\Platform\WindowsPlatform.cpp" />
     <ClCompile Include="..\..\Source\Renderer\VulkanRenderer.cpp" />
     <ClCompile Include="..\..\Source\ResourceLoader\ResourceLoader.cpp" />
+    <ClCompile Include="..\..\Source\Scripting\ChakraScriptEngine.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
