Added ShaderCompiler tool.
Shaders are written in HLSL now.
ShaderCompiler is compiling all shaders and outputing hex numbers to be added to headers.
Renderer is loading shaders with inlined binary representation of shaders.
Added games and tools filter to solution.
Fixed intermediate folder for projects because of clashing of main.obj

--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -44,11 +44,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)Build\$(Configuration)_$(Platform)\bin\</OutDir>
-    <IntDir>$(SolutionDir)Build\$(Configuration)_$(Platform)\obj\</IntDir>
+    <IntDir>$(SolutionDir)Build\$(Configuration)_$(Platform)\obj\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)Build\$(Configuration)_$(Platform)\bin\</OutDir>
-    <IntDir>$(SolutionDir)Build\$(Configuration)_$(Platform)\obj\</IntDir>
+    <IntDir>$(SolutionDir)Build\$(Configuration)_$(Platform)\obj\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
